# eye-API-AIG

./: README.md  demo.py  docker-compose.yml  face-util.py  find_facial_features_in_picture_w_api.py  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  cedula.py  face_util.py  find_facial_features_in_picture_w_api.py  main.py  ocr.py  pyproject.toml  requirements.txt
backend/ models/: image.py
backend/models/: __init__.py  base.py  documento.py  image.py  user.py
frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Card.tsx  Footer.tsx  NavBar.tsx
frontend/pages/: index.tsx
frontend/pages/reconocimiento-de-texto/: index.tsx
frontend/pages/reconocimiento-de-texto/cedula/: index.tsx
frontend/pages/reconocimiento-de-texto/documento/: index.tsx
frontend/pages/reconocimiento-de-texto/pasaporte/: index.tsx
frontend/pages/reconocimiento-facial/: index.tsx
frontend/pages/reconocimiento-facial/contorno/: index.tsx
frontend/pages/reconocimiento-facial/persona/: index.tsx
frontend/pages/reconocimiento-facial/porcentaje/: index.tsx
frontend/services/: userService.ts
frontend/types/: IUser.ts
